src/test/ui/generic-associated-types/parse/trait-path-segments.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `:`, `<`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:8:36
   |
LL |     fn f1<'a>(arg : Box<dyn X<X::Y = u32>>) {}
   |                                  - ^ expected one of 8 possible tokens
   |                                  |
   |                                  maybe try to close unmatched angle bracket

error: expected one of `,`, `::`, `:`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:19:35
   |
LL |     impl<T : X<<Self as X>::Y<'a> = &'a u32>> Z for T {}
   |                                 - ^ expected one of `,`, `::`, `:`, or `>`
   |                                 |
   |                                 maybe try to close unmatched angle bracket

error: expected one of `!`, `+`, `,`, `::`, `:`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:30:25
   |
LL |     impl<T : X<X::Y<'a> = &'a u32>> Z for T {}
   |                       - ^ expected one of `!`, `+`, `,`, `::`, `:`, or `>`
   |                       |
   |                       maybe try to close unmatched angle bracket

error: aborting due to 3 previous errors

